tests/common/snapshots/e2e_tests__common__visual_testing__Line Wrapping__long_line_wrapped.snap
---
source: tests/common/visual_testing.rs
expression: "&screen_text"
---
 File   Edit   View   Selection   Go   Help                 
 [No Name]*                                                 
    1 │ This is a very long line of text that will definit █
        ely exceed the terminal width and should wrap to m █
        ultiple lines when line wrapping is enabled.       █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
[No Name] [+] | Ln 0, Col 144               Palette: Ctrl+P
