tests/common/snapshots/e2e_tests__common__visual_testing__Line Wrapping__multiple_wrapped.snap
---
source: tests/common/visual_testing.rs
expression: "&screen_text"
---
 File   Edit   View   Selection   Go   Help                 
 [No Name]*                                                 
    1 │ This is a very long line of text that will definit █
        ely exceed the terminal width and should wrap to m █
        ultiple lines when line wrapping is enabled.       █
    4 │ Second extremely long line with even more text to  █
        demonstrate that multiple lines can be wrapped at  █
        the same time without any issues in the rendering  █
        system.                                            █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
[No Name] [+] | Ln 1, Col 157               Palette: Ctrl+P
