tests/common/snapshots/e2e_tests__common__visual_testing__Line Wrapping__wrapping_disabled.snap
---
source: tests/common/visual_testing.rs
expression: "&screen_text"
---
 File   Edit   View   Selection   Go   Help                 
 [No Name]*                                                 
    1 │ ld normally wrap but now extends beyond the view.  █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
                                                           █
[No Name] [+] | Ln 0, Col 136               Palette: Ctrl+P
